@@ -7,6 +7,7 @@ Process Hacker
    * Tasks are shown in tooltips for taskeng.exe/taskhost.exe processes
    * Run As can now start processes elevated
    * Handle count by type
+   * Process priorities in notification icon menu
    * CSV export
    * Relative start times
  * FIXED:
